@@ -1,5 +1,10 @@
 2018-05-24  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/85780
+	* gfortran.dg/pr85780.f90: New test.
+
+2018-05-24  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/85779
 	* gfortran.dg/pr85779_1.f90: New test.
 	* gfortran.dg/pr85779_2.f90: Ditto.
